[package]
name = "ipfs-multi-client"
description = "Ipfs client library for WASM and Desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.7", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = true, features = ["io"] }
reqwest = { git = "https://github.com/SionoiS/reqwest", branch = "stream", default-features = false, features = ["json", "multipart", "stream"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ['full']}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
#wasm-pack test --chrome
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.28"
web-sys = { version = "0.3", features = ['console']}